# nodemoss

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md  flake.nix
GeometricTools/: README.md
GeometricTools/GTE/: CMakeLists.txt
GeometricTools/GTE/Applications/: CMakeLists.txt
GeometricTools/GTE/Graphics/: CMakeLists.txt
GeometricTools/GTE/MathematicsGPU/: CMakeLists.txt
GeometricTools/GTE/Samples/: CMakeLists.txt
GeometricTools/GTE/Samples/Distance/: CMakeLists.txt
GeometricTools/GTE/Samples/Distance/DistanceAlignedBoxOrientedBox/: CMakeLists.txt
GeometricTools/GTE/Samples/Distance/DistanceAlignedBoxes/: CMakeLists.txt
GeometricTools/GTE/Samples/Distance/DistanceLine2Box2/: CMakeLists.txt
GeometricTools/GTE/Samples/Distance/DistanceOrientedBoxConeFrustum/: CMakeLists.txt
GeometricTools/GTE/Samples/Distance/DistanceOrientedBoxes/: CMakeLists.txt
GeometricTools/GTE/Samples/Distance/DistancePointConvexPolyhedron/: CMakeLists.txt
GeometricTools/GTE/Samples/Distance/DistancePointHyperellipsoid/: CMakeLists.txt
GeometricTools/GTE/Samples/Distance/DistanceRectangleBox/: CMakeLists.txt
GeometricTools/GTE/Samples/Distance/DistanceSegments3/: CMakeLists.txt
GeometricTools/GTE/Samples/Distance/DistanceTriangleBox/: CMakeLists.txt
GeometricTools/GTE/Samples/Geometrics/: CMakeLists.txt
GeometricTools/GTE/Samples/Geometrics/CLODPolyline/: CMakeLists.txt
GeometricTools/GTE/Samples/Geometrics/ConformalMapping/: CMakeLists.txt
GeometricTools/GTE/Samples/Geometrics/ConstrainedDelaunay2D/: CMakeLists.txt
GeometricTools/GTE/Samples/Geometrics/ConvexHull2D/: CMakeLists.txt
GeometricTools/GTE/Samples/Geometrics/ConvexHull3D/: CMakeLists.txt
GeometricTools/GTE/Samples/Geometrics/ConvexHullSimplePolygon/: CMakeLists.txt
GeometricTools/GTE/Samples/Geometrics/Delaunay2D/: CMakeLists.txt
GeometricTools/GTE/Samples/Geometrics/Delaunay3D/: CMakeLists.txt
GeometricTools/GTE/Samples/Geometrics/DisjointIntervalsRectangles/: CMakeLists.txt
GeometricTools/GTE/Samples/Geometrics/ExtremalQuery/: CMakeLists.txt
GeometricTools/GTE/Samples/Geometrics/GenerateMeshUVs/: CMakeLists.txt
GeometricTools/GTE/Samples/Geometrics/IncrementalDelaunay2/: CMakeLists.txt
GeometricTools/GTE/Samples/Geometrics/MinimalCycleBasis/: CMakeLists.txt
GeometricTools/GTE/Samples/Geometrics/MinimumAreaBox2D/: CMakeLists.txt
GeometricTools/GTE/Samples/Geometrics/MinimumAreaCircle2D/: CMakeLists.txt
GeometricTools/GTE/Samples/Geometrics/MinimumVolumeBox3D/: CMakeLists.txt
GeometricTools/GTE/Samples/Geometrics/MinimumVolumeSphere3D/: CMakeLists.txt
GeometricTools/GTE/Samples/Geometrics/PolygonBooleanOperations/: CMakeLists.txt
GeometricTools/GTE/Samples/Graphics/: CMakeLists.txt
GeometricTools/GTE/Samples/Imagics/: CMakeLists.txt
GeometricTools/GTE/Samples/Intersection/: CMakeLists.txt
GeometricTools/GTE/Samples/Mathematics/: CMakeLists.txt
GeometricTools/GTE/Samples/Physics/: CMakeLists.txt
GeometricTools/GTE/Samples/SceneGraphs/: CMakeLists.txt
GeometricTools/GTE/Tools/BitmapFontCreator/: BitmapFontCreator.v17.vcxproj
crates/app/: Cargo.toml
crates/app/src/: lib.rs
crates/assets/: Cargo.toml
crates/assets/src/: lib.rs  mesh_factory.rs
crates/math/: Cargo.toml
crates/math/src/: lib.rs
crates/render/: Cargo.toml  build.rs
crates/render/src/: lib.rs
crates/scene/: Cargo.toml
crates/scene/src/: lib.rs
docs/: APPLICATION.md  ARCHITECTURE.md  RESOURCES.md  SCENEGRAPH.md
examples/hello_triangle/: Cargo.toml
examples/hello_triangle/src/: main.rs  shader.wgsl
examples/multi_object/: Cargo.toml
examples/multi_object/src/: main.rs
examples/offscreen_demo/: Cargo.toml
examples/offscreen_demo/src/: main.rs
examples/triangle_scenegraph/: Cargo.toml
examples/triangle_scenegraph/src/: main.rs
(+142 files in other folders)
