[package]
name = "rig-render"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Concrete wgpu renderer for the rig framework"

[dependencies]
rig-math.workspace = true
rig-assets.workspace = true
rig-scene.workspace = true
wgpu.workspace = true
winit.workspace = true
bytemuck.workspace = true
pollster.workspace = true
log.workspace = true
thiserror.workspace = true
