[package]
name = "rig-scene"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Arena-based scene graph and world model for the rig framework"

[dependencies]
rig-math.workspace = true
rig-assets.workspace = true
thiserror.workspace = true
