[package]
name = "multi_object"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Milestone 3: multiple objects rendered via MeshFactory with depth, shared assets, and visibility toggling"

[dependencies]
rig-app.workspace = true
env_logger.workspace = true
anyhow.workspace = true
log.workspace = true
