[package]
name = "offscreen_demo"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Milestone 3: offscreen rendering demo — scene rendered to RenderTarget, displayed as a textured quad"

[dependencies]
rig-app.workspace = true
env_logger.workspace = true
anyhow.workspace = true
