[package]
name = "triangle_scenegraph"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Milestone 2: triangle rendered through scene, assets, renderer, and app crates"

[dependencies]
rig-app.workspace = true
bytemuck.workspace = true
env_logger.workspace = true
anyhow.workspace = true
